# Homework_20.2

./: README.md  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/templates/: base.html  contact.html  products_details.html  products_list.html
config/: settings.py  urls.py
